--- a/pages/map/map.wxml
+++ b/pages/map/map.wxml
@@ -1,17 +1,17 @@
 <view class="container">
   <!-- 地图 -->
   <map 
+    id="myMap"
     longitude="{{longitude}}" 
     latitude="{{latitude}}" 
     markers="{{markers}}" 
     bindmarkertap="onMarkerTap" 
     style="width: 100%; height: 100%;" 
-    scale="16" 
+    scale="18" 
     show-location
-    subkey="B6LBZ-H5C6Q-ARC5A-4C3AG-PWCTZ-L4BM5"
     layer-style="1"
   ></map>
-
+  <!-- subkey="B6LBZ-H5C6Q-ARC5A-4C3AG-PWCTZ-L4BM5" -->
   <!-- 悬浮的搜索按钮 -->
   <button 
     class="search-btn" 
